feat: adapt Forge build to Minecraft 1.16.5