@@ -3,19 +3,19 @@ package com.lumoren.dglabcraft.gui;
 import com.lumoren.dglabcraft.config.ModConfig;
 import com.lumoren.dglabcraft.network.WebSocketServerManager;
 import com.lumoren.dglabcraft.util.QRCodeGenerator;
-import com.mojang.blaze3d.platform.NativeImage;
+import net.minecraft.client.renderer.texture.NativeImage;
 import com.mojang.blaze3d.systems.RenderSystem;
-import com.mojang.blaze3d.vertex.PoseStack;
-import net.minecraft.ChatFormatting;
+import com.mojang.blaze3d.matrix.MatrixStack;
+import net.minecraft.util.text.TextFormatting;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.components.Button;
-import net.minecraft.client.gui.components.EditBox;
-import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.gui.widget.button.Button;
+import net.minecraft.client.gui.widget.TextFieldWidget;
+import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.renderer.texture.DynamicTexture;
-import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.TranslatableComponent;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.util.FormattedCharSequence;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.text.TranslationTextComponent;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.IReorderingProcessor;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -29,15 +29,15 @@ import java.util.List;
  * 显示连接状态和二维码
  */
 public class ConnectionScreen extends Screen {
-    private static final Component MANUAL_IP_HINT = new TranslatableComponent("hint.dglabcraft.manual_ip")
-        .withStyle(ChatFormatting.GRAY, ChatFormatting.ITALIC);
+    private static final ITextComponent MANUAL_IP_HINT = new TranslationTextComponent("hint.dglabcraft.manual_ip")
+        .withStyle(TextFormatting.GRAY, TextFormatting.ITALIC);
 
     private final Screen parent;
     private Button refreshQrButton;
     private Button openQrButton;
     private Button openQrFolderButton;
     private Button doneButton;
-    private EditBox manualIpInput;
+    private TextFieldWidget manualIpInput;
     private boolean manualIpInvalid = false;
     private ResourceLocation qrTextureLocation;
     private long qrTextureModifiedAt = -1L;
@@ -48,7 +48,7 @@ public class ConnectionScreen extends Screen {
     private ConnectionLayout.Layout currentLayout;
 
     public ConnectionScreen(Screen parent) {
-        super(new TranslatableComponent("screen.dglabcraft.connection_settings"));
+        super(new TranslationTextComponent("screen.dglabcraft.connection_settings"));
         this.parent = parent;
     }
 
@@ -63,13 +63,13 @@ public class ConnectionScreen extends Screen {
         WebSocketServerManager server = WebSocketServerManager.getInstance();
 
         ConnectionLayout.Rect manualInput = layout.manualInput();
-        this.manualIpInput = new EditBox(this.font, manualInput.x(), manualInput.y(), manualInput.width(), manualInput.height(), new TranslatableComponent("label.dglabcraft.manual_lan_ip"));
+        this.manualIpInput = new TextFieldWidget(this.font, manualInput.x(), manualInput.y(), manualInput.width(), manualInput.height(), new TranslationTextComponent("label.dglabcraft.manual_lan_ip"));
         String currentHost = ModConfig.WS_HOST.get();
-        if (currentHost != null && !currentHost.isBlank() && !"localhost".equalsIgnoreCase(currentHost)) {
+        if (currentHost != null && !currentHost.trim().isEmpty() && !"localhost".equalsIgnoreCase(currentHost)) {
             this.manualIpInput.setValue(currentHost);
         }
         this.manualIpInput.setSuggestion(MANUAL_IP_HINT.getString());
-        this.addRenderableWidget(this.manualIpInput);
+        this.addButton(this.manualIpInput);
 
         if (!server.isConnected()) {
             ensureQrCodeGenerated();
@@ -78,40 +78,40 @@ public class ConnectionScreen extends Screen {
         // 刷新二维码按钮
         ConnectionLayout.Rect refresh = layout.controlButtons().get(0);
         this.refreshQrButton = new Button(refresh.x(), refresh.y(), refresh.width(), refresh.height(),
-            new TranslatableComponent("button.dglabcraft.refresh_qr"), button -> {
+            new TranslationTextComponent("button.dglabcraft.refresh_qr"), button -> {
             if (commitManualIpInput()) {
                 ensureQrCodeGenerated();
             }
         });
-        this.addRenderableWidget(this.refreshQrButton);
+        this.addButton(this.refreshQrButton);
 
         // 打开二维码按钮
         ConnectionLayout.Rect open = layout.controlButtons().get(1);
         this.openQrButton = new Button(open.x(), open.y(), open.width(), open.height(),
-            new TranslatableComponent("button.dglabcraft.open_qr_image"), button -> {
+            new TranslationTextComponent("button.dglabcraft.open_qr_image"), button -> {
             File qrFile = getQrCodeFile();
             if (qrFile.isFile()) {
-                net.minecraft.Util.getPlatform().openFile(qrFile);
+                net.minecraft.util.Util.getPlatform().openFile(qrFile);
             }
         });
-        this.addRenderableWidget(this.openQrButton);
+        this.addButton(this.openQrButton);
 
         ConnectionLayout.Rect openFolder = layout.controlButtons().get(2);
         this.openQrFolderButton = new Button(openFolder.x(), openFolder.y(), openFolder.width(), openFolder.height(),
-            new TranslatableComponent("button.dglabcraft.open_qr_folder"), button -> {
+            new TranslationTextComponent("button.dglabcraft.open_qr_folder"), button -> {
             File qrFile = getQrCodeFile();
             File qrFolder = qrFile.getParentFile();
             if (qrFolder != null && qrFolder.isDirectory()) {
-                net.minecraft.Util.getPlatform().openFile(qrFolder);
+                net.minecraft.util.Util.getPlatform().openFile(qrFolder);
             }
         });
-        this.addRenderableWidget(this.openQrFolderButton);
+        this.addButton(this.openQrFolderButton);
 
         // 完成按钮
         ConnectionLayout.Rect done = layout.doneButton();
         this.doneButton = new Button(done.x(), done.y(), done.width(), done.height(),
-            new TranslatableComponent("button.dglabcraft.done"), button -> this.onClose());
-        this.addRenderableWidget(this.doneButton);
+            new TranslationTextComponent("button.dglabcraft.done"), button -> this.onClose());
+        this.addButton(this.doneButton);
     }
 
     @Override
@@ -168,7 +168,7 @@ public class ConnectionScreen extends Screen {
     }
 
     @Override
-    public void render(PoseStack poseStack, int mouseX, int mouseY, float partialTick) {
+    public void render(MatrixStack poseStack, int mouseX, int mouseY, float partialTick) {
         this.renderBackground(poseStack);
 
         int centerX = this.width / 2;
@@ -190,21 +190,21 @@ public class ConnectionScreen extends Screen {
 
         super.render(poseStack, mouseX, mouseY, partialTick);
 
-        drawCenteredString(poseStack, this.font, new TranslatableComponent("screen.dglabcraft.connection_settings"),
+        drawCenteredString(poseStack, this.font, new TranslationTextComponent("screen.dglabcraft.connection_settings"),
             centerX, ConnectionLayout.HEADER_TITLE_Y, 0xFFFFFF);
 
-        Component statusText;
+        ITextComponent statusText;
         int statusColor;
         if (isConnected) {
-            statusText = new TranslatableComponent("status.dglabcraft.connected");
+            statusText = new TranslationTextComponent("status.dglabcraft.connected");
             statusColor = 0x00FF00;
         } else {
-            statusText = new TranslatableComponent("status.dglabcraft.waiting_connection");
+            statusText = new TranslationTextComponent("status.dglabcraft.waiting_connection");
             statusColor = 0xFFFF00;
         }
         drawCenteredString(poseStack, this.font, statusText, centerX, ConnectionLayout.HEADER_STATUS_Y, statusColor);
 
-        drawCenteredString(poseStack, this.font, new TranslatableComponent("label.dglabcraft.address",
+        drawCenteredString(poseStack, this.font, new TranslationTextComponent("label.dglabcraft.address",
             server.resolveConnectionHost(), server.getPort()), centerX, ConnectionLayout.HEADER_ADDRESS_Y, 0xAAAAAA);
 
         if (!isConnected) {
@@ -219,7 +219,7 @@ public class ConnectionScreen extends Screen {
         if (isConnected) {
             String clientId = server.getConnectedClientId();
             if (clientId != null) {
-                drawCenteredString(poseStack, this.font, new TranslatableComponent("label.dglabcraft.device", clientId), centerX, 90, 0xAAAAAA);
+                drawCenteredString(poseStack, this.font, new TranslationTextComponent("label.dglabcraft.device", clientId), centerX, 90, 0xAAAAAA);
             }
         }
     }
@@ -241,28 +241,28 @@ public class ConnectionScreen extends Screen {
         return qrFolder != null && qrFolder.isDirectory();
     }
 
-    private void renderQrPanel(PoseStack poseStack, ConnectionLayout.Layout layout, File qrFile) {
+    private void renderQrPanel(MatrixStack poseStack, ConnectionLayout.Layout layout, File qrFile) {
         ConnectionLayout.Rect panel = layout.qrPanel();
         ConnectionLayout.Rect qr = layout.qrImage();
         fill(poseStack, panel.x() - 2, panel.y() - 2, panel.right() + 2, panel.bottom() + 2, 0xFF111111);
         fill(poseStack, panel.x(), panel.y(), panel.right(), panel.bottom(), 0xFFFFFFFF);
 
         if (qrFile.isFile() && loadQrTexture(qrFile)) {
-            RenderSystem.setShaderTexture(0, qrTextureLocation);
+            Minecraft.getInstance().getTextureManager().bind(qrTextureLocation);
             blit(poseStack, layout.qrImage().x(), layout.qrImage().y(),
                 layout.qrImage().width(), layout.qrImage().height(), 0.0F, 0.0F,
                 qrTextureWidth, qrTextureHeight, qrTextureWidth, qrTextureHeight);
         } else {
-            drawCenteredString(poseStack, this.font, new TranslatableComponent("message.dglabcraft.scan_qr"),
+            drawCenteredString(poseStack, this.font, new TranslationTextComponent("message.dglabcraft.scan_qr"),
                 qr.x() + qr.width() / 2, qr.y() + qr.height() / 2 - 4, 0x555555);
         }
     }
 
-    private void renderConnectionHelp(PoseStack poseStack, ConnectionLayout.Layout layout) {
+    private void renderConnectionHelp(MatrixStack poseStack, ConnectionLayout.Layout layout) {
         ConnectionLayout.Rect controls = layout.controls();
-        Component manualLabel = manualIpInvalid
-            ? new TranslatableComponent("error.dglabcraft.invalid_manual_ip")
-            : new TranslatableComponent("label.dglabcraft.manual_lan_ip");
+        ITextComponent manualLabel = manualIpInvalid
+            ? new TranslationTextComponent("error.dglabcraft.invalid_manual_ip")
+            : new TranslationTextComponent("label.dglabcraft.manual_lan_ip");
         int manualLabelColor = manualIpInvalid ? 0xFF5555 : 0xAAAAAA;
         drawCenteredString(poseStack, this.font, manualLabel,
             controls.x() + controls.width() / 2, layout.manualLabelY(), manualLabelColor);
@@ -284,7 +284,7 @@ public class ConnectionScreen extends Screen {
         enableScissor(viewport);
         for (HelpLine line : lines) {
             if (line.text() != null && y + line.height() > viewport.y() && y < viewport.bottom()) {
-                drawCenteredString(poseStack, this.font, line.text(), centerX, y, line.color());
+                this.font.draw(poseStack, line.text(), centerX - this.font.width(line.text()) / 2.0F, y, line.color());
             }
             y += line.height();
         }
@@ -294,28 +294,28 @@ public class ConnectionScreen extends Screen {
 
     private List<HelpLine> buildHelpLines(int maxWidth) {
         List<HelpLine> lines = new ArrayList<>();
-        addWrappedHelpLine(lines, new TranslatableComponent("section.dglabcraft.connection_guide"), maxWidth, 0xFFFF55, 13);
-        addWrappedHelpLine(lines, new TranslatableComponent("guide.dglabcraft.connection.step1"), maxWidth, 0xAAAAAA, 11);
-        addWrappedHelpLine(lines, new TranslatableComponent("guide.dglabcraft.connection.step2"), maxWidth, 0xAAAAAA, 11);
-        addWrappedHelpLine(lines, new TranslatableComponent("guide.dglabcraft.connection.step3"), maxWidth, 0xAAAAAA, 11);
-        addWrappedHelpLine(lines, new TranslatableComponent("guide.dglabcraft.connection.step4"), maxWidth, 0xDDDDDD, 11);
-        addWrappedHelpLine(lines, new TranslatableComponent("guide.dglabcraft.connection.step5"), maxWidth, 0xFFFF55, 11);
+        addWrappedHelpLine(lines, new TranslationTextComponent("section.dglabcraft.connection_guide"), maxWidth, 0xFFFF55, 13);
+        addWrappedHelpLine(lines, new TranslationTextComponent("guide.dglabcraft.connection.step1"), maxWidth, 0xAAAAAA, 11);
+        addWrappedHelpLine(lines, new TranslationTextComponent("guide.dglabcraft.connection.step2"), maxWidth, 0xAAAAAA, 11);
+        addWrappedHelpLine(lines, new TranslationTextComponent("guide.dglabcraft.connection.step3"), maxWidth, 0xAAAAAA, 11);
+        addWrappedHelpLine(lines, new TranslationTextComponent("guide.dglabcraft.connection.step4"), maxWidth, 0xDDDDDD, 11);
+        addWrappedHelpLine(lines, new TranslationTextComponent("guide.dglabcraft.connection.step5"), maxWidth, 0xFFFF55, 11);
         lines.add(new HelpLine(null, 0, 5));
-        addWrappedHelpLine(lines, new TranslatableComponent("section.dglabcraft.connection_troubleshooting"), maxWidth, 0xFF6666, 13);
-        addWrappedHelpLine(lines, new TranslatableComponent("troubleshoot.dglabcraft.connection.same_wifi"), maxWidth, 0xFF7777, 11);
-        addWrappedHelpLine(lines, new TranslatableComponent("troubleshoot.dglabcraft.connection.firewall"), maxWidth, 0xFF7777, 11);
-        addWrappedHelpLine(lines, new TranslatableComponent("troubleshoot.dglabcraft.connection.manual_ip"), maxWidth, 0xFF7777, 11);
-        addWrappedHelpLine(lines, new TranslatableComponent("troubleshoot.dglabcraft.connection.port"), maxWidth, 0xFF7777, 11);
+        addWrappedHelpLine(lines, new TranslationTextComponent("section.dglabcraft.connection_troubleshooting"), maxWidth, 0xFF6666, 13);
+        addWrappedHelpLine(lines, new TranslationTextComponent("troubleshoot.dglabcraft.connection.same_wifi"), maxWidth, 0xFF7777, 11);
+        addWrappedHelpLine(lines, new TranslationTextComponent("troubleshoot.dglabcraft.connection.firewall"), maxWidth, 0xFF7777, 11);
+        addWrappedHelpLine(lines, new TranslationTextComponent("troubleshoot.dglabcraft.connection.manual_ip"), maxWidth, 0xFF7777, 11);
+        addWrappedHelpLine(lines, new TranslationTextComponent("troubleshoot.dglabcraft.connection.port"), maxWidth, 0xFF7777, 11);
         return lines;
     }
 
-    private void addWrappedHelpLine(List<HelpLine> lines, Component text, int maxWidth, int color, int lineHeight) {
-        for (FormattedCharSequence wrappedLine : this.font.split(text, maxWidth)) {
+    private void addWrappedHelpLine(List<HelpLine> lines, ITextComponent text, int maxWidth, int color, int lineHeight) {
+        for (IReorderingProcessor wrappedLine : this.font.split(text, maxWidth)) {
             lines.add(new HelpLine(wrappedLine, color, lineHeight));
         }
     }
 
-    private void renderHelpScrollBar(PoseStack poseStack, ConnectionLayout.Rect viewport, int contentHeight) {
+    private void renderHelpScrollBar(MatrixStack poseStack, ConnectionLayout.Rect viewport, int contentHeight) {
         if (this.maxHelpScroll <= 0 || viewport.height() <= 0) {
             return;
         }
@@ -393,6 +393,19 @@ public class ConnectionScreen extends Screen {
         return true;
     }
 
-    private record HelpLine(FormattedCharSequence text, int color, int height) {
+    private static final class HelpLine {
+        private final IReorderingProcessor text;
+        private final int color;
+        private final int height;
+
+        private HelpLine(IReorderingProcessor text, int color, int height) {
+            this.text = text;
+            this.color = color;
+            this.height = height;
+        }
+
+        IReorderingProcessor text() { return text; }
+        int color() { return color; }
+        int height() { return height; }
     }
 }
