@@ -5,15 +5,17 @@ import com.google.gson.JsonParser;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Set;
 import java.util.TreeSet;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class LangFileTest {
-    private static final Path LANG_DIR = Path.of("src/main/resources/assets/dglabcraft/lang");
+    private static final Path LANG_DIR = Paths.get("src/main/resources/assets/dglabcraft/lang");
     private static final String[] LOCALES = {"zh_cn", "ja_jp", "de_de", "ru_ru", "fr_fr"};
 
     @Test
@@ -26,8 +28,10 @@ class LangFileTest {
     }
 
     private Set<String> keys(String locale) throws IOException {
-        String json = Files.readString(LANG_DIR.resolve(locale + ".json"));
-        JsonObject object = JsonParser.parseString(json).getAsJsonObject();
-        return new TreeSet<>(object.keySet());
+        String json = new String(Files.readAllBytes(LANG_DIR.resolve(locale + ".json")), StandardCharsets.UTF_8);
+        JsonObject object = new JsonParser().parse(json).getAsJsonObject();
+        TreeSet<String> keys = new TreeSet<>();
+        object.entrySet().forEach(entry -> keys.add(entry.getKey()));
+        return keys;
     }
 }
