@@ -3,6 +3,7 @@ package com.lumoren.dglabcraft.util;
 import com.google.gson.Gson;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -21,11 +22,11 @@ class WaveformManagerTest {
         Gson gson = new Gson();
 
         assertEquals(
-            List.of("0A0A0A0A0A0A0A0A", "1414141414141414"),
+            Arrays.asList("0A0A0A0A0A0A0A0A", "1414141414141414"),
             manager.parseWaveformJson("[\"0A0A0A0A0A0A0A0A\",\"1414141414141414\"]", gson)
         );
         assertEquals(
-            List.of("1E1E1E1E1E1E1E1E"),
+            Arrays.asList("1E1E1E1E1E1E1E1E"),
             manager.parseWaveformJson("{\"data\":[\"1E1E1E1E1E1E1E1E\"]}", gson)
         );
     }
@@ -35,8 +36,8 @@ class WaveformManagerTest {
         WaveformManager manager = WaveformManager.getInstance();
 
         assertEquals(
-            List.of(List.of("a", "b"), List.of("c")),
-            manager.chunkList(List.of("a", "b", "c"), 2)
+            Arrays.asList(Arrays.asList("a", "b"), Arrays.asList("c")),
+            manager.chunkList(Arrays.asList("a", "b", "c"), 2)
         );
     }
 }
